@@ -27,9 +27,9 @@ dependencies {
     compile 'org.apache.logging.log4j:log4j-api:2.17.1'
     compile 'org.apache.logging.log4j:log4j-core:2.17.1'
     compile 'org.apache.httpcomponents:httpclient:4.5.13'
-    compile 'com.oracle.database.jdbc:ojdbc8:19.8.0.0'
-    compile 'org.springframework:spring-beans:5.2.8.RELEASE'
-    compile 'org.springframework:spring-jdbc:5.2.8.RELEASE'
+    compile 'com.oracle.database.jdbc:ojdbc8:19.9.0.0'
+    compile 'org.springframework:spring-beans:5.2.9.RELEASE'
+    compile 'org.springframework:spring-jdbc:5.2.9.RELEASE'
 
     compile fileTree(dir: 'lib', include: '*.jar')
 }
