@@ -1,3 +1,6 @@
+Mar 28, 2022
+  updated list of REF_RGD_IDs for GO pipelines to generate correct CREATION_DATE for IEA annotations
+
 Jan 31, 2022
   code simplification
   fixed logging of imported PMIDs
